--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@hapi/vision": "^6.1.0",
     "bcrypt": "^5.0.1",
     "boom": "^7.3.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "hapi": "^18.1.0",
     "hapi-auth-jwt2": "^10.2.0",
