--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "// Mostra os processos que estão em execução - docker ps",
   "main": "index.js",
   "scripts": {
-    "test": "mocha src/tests/*.js -w",
+    "test": "mocha --timeout 10000 src/tests/*.js -w",
     "test:dev": "cross-env NODE_ENV=dev npm t",
     "test:prod": "cross-env NODE_ENV=prod npm t",
     "start": "node ./src/api.js",
