--- a/src/config/.env.dev
+++ b/src/config/.env.dev
@@ -3,3 +3,4 @@ PORT=7200
 SALT_PWD=3
 MONGODB_URL=mongodb://itallo:minhasenhasecreta@localhost:27017/herois
 POSTGRES_URL=postgres://itallo:minhasenhasecreta@localhost/heroes
+SSL_DB=false
