--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node ./src/api.js",
     "start:prod": "cross-env NODE_ENV=prod && npm run start",
     "start:dev": "cross-env NODE_ENV=dev && npm run start",
-    "prod": "cross-env NODE_ENV=prod && node ./src/api.js",
+    "prod": "cross-env NODE_ENV=production && node ./src/api.js",
     "dev": "cross-env NODE_ENV=dev && node ./src/api.js"
   },
   "keywords": [],
