--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha --timeout 10000 src/tests/*.js -w",
     "test:dev": "cross-env NODE_ENV=dev npm t",
-    "test:prod": "cross-env NODE_ENV=prod npm t",
+    "test:prod": "cross-env NODE_ENV=production npm t",
     "start": "node ./src/api.js",
     "start:prod": "cross-env NODE_ENV=prod && npm run start",
     "start:dev": "cross-env NODE_ENV=dev && npm run start",
