--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "// Mostra os processos que estão em execução - docker ps",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --timeout 10000 src/tests/*.js -w",
+    "test": "mocha --timeout 20000 src/tests/*.js -w",
     "test:dev": "cross-env NODE_ENV=dev npm t",
     "test:prod": "cross-env NODE_ENV=production npm t",
-    "start": "node ./src/api.js",
+    "start": "pm2-runtime ./src/api.js",
     "start:prod": "cross-env NODE_ENV=prod && npm run start",
     "start:dev": "cross-env NODE_ENV=dev && npm run start",
     "prod": "cross-env NODE_ENV=production && node ./src/api.js",
