--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "// Mostra os processos que estão em execução - docker ps",
   "main": "index.js",
   "scripts": {
+    "preinstall": "npm i -g pm2",
     "test": "mocha --timeout 20000 src/tests/*.js -w",
     "test:dev": "cross-env NODE_ENV=dev npm t",
     "test:prod": "cross-env NODE_ENV=production npm t",
